# task_tracker_bot

./: .gitignore  aiogram_run.py  create_bot.py  plan.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 696544cbebcb_initial.py  72a402871432_initial.py
api/: main.py
bot/: models.py
bot/db_handler/: db.py
bot/handlers/: start.py  tasks.py
database/: models.py
